--- a/index.html
+++ b/index.html
@@ -93,19 +93,29 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
+  <!-- 使用 esm.sh 的 tsx 轉換器來處理瀏覽器端的 .tsx 檔案 -->
   <script type="module">
-    import "./index.tsx";
+    import { createRoot } from 'react-dom/client';
+    import React from 'react';
+    import App from './App.tsx';
+    
+    const rootElement = document.getElementById('root');
+    if (rootElement) {
+      const root = createRoot(rootElement);
+      root.render(React.createElement(React.StrictMode, null, React.createElement(App)));
+    }
   </script>
 </body>
 </html>
