--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0?dev",
+    "react": "https://esm.sh/react@19.0.0",
     "react/": "https://esm.sh/react@19.0.0/",
-    "react-dom": "https://esm.sh/react-dom@19.0.0?dev",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?dev",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
@@ -105,6 +105,6 @@
 <body>
   <div id="root"></div>
   <script type="module" src="https://esm.sh/run"></script>
-  <script type="text/babel" src="./index.tsx"></script>
+  <script type="text/babel" src="index.tsx"></script>
 </body>
 </html>
