--- a/Guide-maker-main/index.html
+++ b/Guide-maker-main/index.html
@@ -6,7 +6,7 @@
   <title>星雲計畫 - 照護指南</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    window.tailwind.config = {
+    tailwind.config = {
       theme: {
         extend: {
           fontFamily: {
@@ -92,15 +92,12 @@
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
@@ -108,6 +105,6 @@
 <body>
   <div id="root"></div>
   <script type="module" src="https://esm.sh/run"></script>
-  <script type="module" src="index.tsx"></script>
+  <script type="text/babel" data-type="module" src="/index.tsx"></script>
 </body>
 </html>
