--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
 <body>
   <div id="root"></div>
   <script type="module" src="https://esm.sh/run"></script>
-  <script type="text/babel" data-type="module" src="/index.tsx"></script>
+  <script type="text/babel" data-type="module" src="./index.tsx"></script>
 </body>
 </html>
