--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>星雲計畫 - 照護指南</title>
+  
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Babel Standalone: 核心修正，讓瀏覽器能即時編譯 TSX -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  
   <script>
     tailwind.config = {
       theme: {
@@ -26,6 +32,7 @@
       }
     }
   </script>
+  
   <style>
     .pressure-slider::-webkit-slider-thumb {
       -webkit-appearance: none;
@@ -45,9 +52,7 @@
       background: #e5e7eb;
       border-radius: 10px;
     }
-    .pressure-slider:focus {
-      outline: none;
-    }
+    .pressure-slider:focus { outline: none; }
     select {
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%23d98a9d'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 9l-7 7-7-7'%3E%3C/path%3E%3C/svg%3E");
       background-repeat: no-repeat;
@@ -56,48 +61,24 @@
     }
     
     @media print {
-      @page {
-        size: A4;
-        margin: 0;
-      }
-      body {
-        visibility: hidden;
-        background: white;
-        -webkit-print-color-adjust: exact;
-        print-color-adjust: exact;
-      }
-      #result-card {
-        visibility: visible;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        margin: 0;
-        padding: 15mm;
-        border: none !important;
-        box-shadow: none !important;
-      }
-      #result-card * {
-        visibility: visible;
-      }
-      .no-print {
-        display: none !important;
-      }
-      #consult-section {
-        display: none !important;
-      }
+      @page { size: A4; margin: 0; }
+      body { visibility: hidden; background: white; -webkit-print-color-adjust: exact; print-color-adjust: exact; }
+      #result-card { visibility: visible; position: absolute; left: 0; top: 0; width: 100%; margin: 0; padding: 15mm; border: none !important; box-shadow: none !important; }
+      #result-card * { visibility: visible; }
+      .no-print { display: none !important; }
+      #consult-section { display: none !important; }
     }
   </style>
+
   <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
@@ -107,7 +88,22 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="https://esm.sh/run"></script>
-  <script type="text/babel" data-type="module" src="./index.tsx"></script>
+
+  <!-- 使用 Babel 處理進入點 -->
+  <script type="text/babel" data-type="module">
+    import React from 'react';
+    import ReactDOM from 'react-dom/client';
+    import App from './App.tsx';
+
+    const rootElement = document.getElementById('root');
+    if (rootElement) {
+      const root = ReactDOM.createRoot(rootElement);
+      root.render(
+        <React.StrictMode>
+          <App />
+        </React.StrictMode>
+      );
+    }
+  </script>
 </body>
 </html>
