feat: Update Babel CDN to jsDelivr
Switches the Babel Standalone CDN from Cloudflare to jsDelivr for potentially greater stability and reliability.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   }
 }
 </script>
-  <!-- 更換為穩定來源的 Babel Standalone CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.11/babel.min.js"></script>
+  <!-- 使用官方穩定來源的 jsDelivr 提供的 Babel Standalone -->
+  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.23.11/babel.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
