fix: Update Babel Standalone CDN link
Use the latest stable version of Babel Standalone from jsDelivr to resolve issues where a specific older version might not be found. This ensures consistent loading of the Babel transpiler.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   }
 }
 </script>
-  <!-- 使用官方穩定來源的 jsDelivr 提供的 Babel Standalone -->
-  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.23.11/babel.min.js"></script>
+  <!-- 使用 jsDelivr 抓取 Babel Standalone 7 的最新穩定版本，解決特定版本找不到的問題 -->
+  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7/babel.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
