--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/babel" data-type="module" data-presets="react,typescript-auto">
+  <script type="text/babel" data-type="module" data-presets="react,typescript">
     import './index.tsx';
   </script>
 </body>
