--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 </head>
 <body>
   <div id="root"></div>
+  <script>
+    // 注入基礎環境變數，防止部分套件初始化失敗
+    window.process = { env: { NODE_ENV: 'development' } };
+  </script>
   <script type="text/babel" data-type="module" data-presets="react,typescript">
     import './index.tsx';
   </script>
