--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
   <div id="root"></div>
   <script>
-    // 注入基礎環境變數，防止部分套件初始化失敗
+    // 注入基礎環境變數
     window.process = { env: { NODE_ENV: 'development' } };
   </script>
   <script type="text/babel" data-type="module" data-presets="react,typescript">
