--- a/index.html
+++ b/index.html
@@ -110,11 +110,22 @@
 <body>
   <div id="root"></div>
   <script>
-    // 注入基礎環境變數
     window.process = { env: { NODE_ENV: 'development' } };
   </script>
-  <script type="text/babel" data-type="module" data-presets="react,typescript">
-    import './index.tsx';
+  <script type="text/babel" data-presets="react,typescript">
+    import React from 'react';
+    import ReactDOM from 'react-dom/client';
+    import App from './App.tsx';
+
+    const rootElement = document.getElementById('root');
+    if (rootElement) {
+      const root = ReactDOM.createRoot(rootElement);
+      root.render(
+        <React.StrictMode>
+          <App />
+        </React.StrictMode>
+      );
+    }
   </script>
 </body>
 </html>
