--- a/index.html
+++ b/index.html
@@ -112,20 +112,8 @@
   <script>
     window.process = { env: { NODE_ENV: 'development' } };
   </script>
-  <script type="text/babel" data-presets="react,typescript">
-    import React from 'react';
-    import ReactDOM from 'react-dom/client';
-    import App from './App.tsx';
-
-    const rootElement = document.getElementById('root');
-    if (rootElement) {
-      const root = ReactDOM.createRoot(rootElement);
-      root.render(
-        <React.StrictMode>
-          <App />
-        </React.StrictMode>
-      );
-    }
+  <script type="text/babel" data-type="module" data-presets="react,typescript">
+    import './index.tsx';
   </script>
 </body>
 </html>
