--- a/index.html
+++ b/index.html
@@ -45,47 +45,20 @@
       background: #e5e7eb;
       border-radius: 10px;
     }
-    .pressure-slider:focus {
-      outline: none;
-    }
+    .pressure-slider:focus { outline: none; }
     select {
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%23d98a9d'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 9l-7 7-7-7'%3E%3C/path%3E%3C/svg%3E");
       background-repeat: no-repeat;
       background-position: right 1rem center;
       background-size: 1.5rem;
     }
-    
     @media print {
-      @page {
-        size: A4;
-        margin: 0;
-      }
-      body {
-        visibility: hidden;
-        background: white;
-        -webkit-print-color-adjust: exact;
-        print-color-adjust: exact;
-      }
-      #result-card {
-        visibility: visible;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        margin: 0;
-        padding: 15mm;
-        border: none !important;
-        box-shadow: none !important;
-      }
-      #result-card * {
-        visibility: visible;
-      }
-      .no-print {
-        display: none !important;
-      }
-      #consult-section {
-        display: none !important;
-      }
+      @page { size: A4; margin: 0; }
+      body { visibility: hidden; background: white; -webkit-print-color-adjust: exact; print-color-adjust: exact; }
+      #result-card { visibility: visible; position: absolute; left: 0; top: 0; width: 100%; margin: 0; padding: 15mm; border: none !important; box-shadow: none !important; }
+      #result-card * { visibility: visible; }
+      .no-print { display: none !important; }
+      #consult-section { display: none !important; }
     }
   </style>
   <script type="importmap">
@@ -110,7 +83,6 @@
 <body>
   <div id="root"></div>
   <script>
-    // 確保環境變數在組件加載前完成初始化
     window.process = { env: { NODE_ENV: 'production' } };
   </script>
   <script type="text/babel" data-type="module" data-presets="react,typescript">
