--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <body>
   <div id="root"></div>
   <script>
+    // 定義環境變數，確保 React 與其他模組在生產模式運行
     window.process = { env: { NODE_ENV: 'production' } };
   </script>
   <script type="text/babel" data-type="module" data-presets="react,typescript">
