--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
@@ -83,7 +83,6 @@
 <body>
   <div id="root"></div>
   <script>
-    // 定義環境變數，確保 React 與其他模組在生產模式運行
     window.process = { env: { NODE_ENV: 'production' } };
   </script>
   <script type="text/babel" data-type="module" data-presets="react,typescript">
